--- a/src/view/newReport.html
+++ b/src/view/newReport.html
@@ -15,19 +15,22 @@
 </head>
 
 <body class="d-flex" style="justify-content: center; flex-direction: column; align-items: center;">
-    <header class="mb-5 " style=" width:100% ; height: 10vh; box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.2); ">
 
+    <header class="mb-5 " style=" width:100% ; height: 10vh; box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.2); ">
     </header>
+
     <section class="customCard" style="box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.2); ">
         <select id="templateSelect" class="form-select field" aria-label="Default select example">
             <option selected>Template de Reporte</option>
         </select>
         <div id="fieldsGrid" class="field">
-            
         </div>
         <button id="saveReport" type="button" class="btn btn-success">Reportar Gasto</button>
     </section>
+
+    <script type="module" src="./newReport.js"></script>
     <script type="module" src="../controller/newReportController.js"></script>
+    
 </body>
 
 </html>
