--- a/src/view/management/management.html
+++ b/src/view/management/management.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../../assets/styles/management.css">
     <link rel="stylesheet" href="../../assets/styles/header.css">
-
+    <link rel="stylesheet" href="../../assets/styles/main.css">
 </head>
 <body>
 
@@ -78,8 +78,7 @@
     </main>
 
     <script type="module" src="../../controller/managementController.js"></script>
-    <!-- <script type="module" src="./managementOrganization.js"></script> -->
-
-    <!-- <script type="module" src="../../controller/loginController.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
