--- a/src/view/newReport/newReport.html
+++ b/src/view/newReport/newReport.html
@@ -31,7 +31,7 @@
 
     <script type="module" src="./newReportView.js"></script>
     <script type="module" src="../../controller/newReportController.js"></script>
-    
+    <script type="module" src="../../controller/loginOutController.js"></script>
 </body>
 
 </html>
