Se muestra el modal con los datos. sin estilos.

--- a/src/view/history/history.html
+++ b/src/view/history/history.html
@@ -71,18 +71,11 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="staticBackdropLabel">Detalles</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                
-                    <div action="" id="form-modal">
-                        <h4>Info</h2>
-                        <p id= "dataModal"></p>
-
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <!-- <button id="comprarTicket" class="btn btn-comprar"></button> -->
-                    <button id="close" type="button" class="btn btn-comprar" data-bs-dismiss="modal">salir</button>
+                  <div action="" id="modalDetail">
+                  </div>
                 </div>
             </div>
         </div>
