--- a/src/view/pendingApprovals/pendingApprovals.html
+++ b/src/view/pendingApprovals/pendingApprovals.html
@@ -28,17 +28,12 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="staticBackdropLabel">Detalles</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                
-                    <div action="" id="form-modal">
-                        <h4>Info</h2>
-                        <p id="dataModal"> sa</p>
+                    <div id="pendingModal" action="">
+                    
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <!-- <button id="comprarTicket" class="btn btn-comprar"></button> -->
-                    <button id="close" type="button" class="btn btn-comprar" data-bs-dismiss="modal">salir</button>
                 </div>
             </div>
         </div>
