--- a/src/assets/styles/newReport.css
+++ b/src/assets/styles/newReport.css
@@ -10,6 +10,101 @@
     min-width: 10rem;
 }
 
+
+.btn-createReport {
+    width: 50px;
+    height: 50px;
+    background-color: #3498db;
+    color: #fff;
+    text-decoration: none;
+    border: none;
+    border-radius: 50%;
+    position: relative;
+    cursor: pointer;
+}
+
+.btn-createReport:hover {
+    background-color: #2980b9;
+}
+
+.btn-createReport .descripcion {
+    visibility: hidden;
+    width: 200px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -100px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.btn-createReport:hover .descripcion {
+    visibility: visible;
+    opacity: 1;
+}
+
+.templateFields{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    width: 100%;
+
+}
+/* .templateField{
+
+    /* display: flex; */
+    /* gap: 10px; */
+    /* display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    width: 100%; */
+
+
+
+.modal-body .title{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-bottom: 1rem;
+}
+
+.btn-modal {
+    width:130px;
+    height: 2.4rem;
+    background-color: #3498db;
+    color: #fff;
+    text-decoration: none;
+    border: none;
+    border-radius: 20px;
+    position: relative;
+    cursor: pointer;
+    transition: all ease 0.1s;
+}
+
+.btn-modal:hover {
+    transform: scale(1.02);
+    width:130px;
+    height: 2.4rem;
+    background-color: #3498db;
+    color: #fff;
+    text-decoration: none;
+    border: none;
+    border-radius: 20px;
+    position: relative;
+    cursor: pointer;
+}
+
+.center{
+    display: flex;
+    justify-content: center;
+}
+
 @media (max-width: 768px) {
     .customCard > .customButton {
         width: 50%;
