--- a/src/view/newReport/newReport.html
+++ b/src/view/newReport/newReport.html
@@ -73,15 +73,11 @@
         </div>
     </div>
 
-
-
-
-
-
-
-
     <script type="module" src="./newReportView.js"></script>
     <script type="module" src="../../controller/newReportController.js"></script>
+
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 
 </html>
