--- a/src/view/pendingApprovals/pendingApprovals.html
+++ b/src/view/pendingApprovals/pendingApprovals.html
@@ -31,7 +31,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <div id="pendingModal" action="">
+                    <div id="pendingModal" action="" class="detailModal">
                     
                     </div>
                 </div>
