--- a/src/view/history/history.html
+++ b/src/view/history/history.html
@@ -12,77 +12,13 @@
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="../../assets/styles/history.css">
-        <link rel="stylesheet" href="../../assets/styles/fieldsGrid.css">
-        <link rel="stylesheet" href="../../assets/styles/header.css">
         <link rel="stylesheet" href="../../assets/styles/main.css">
 </head>
 
 <body>
 
     <header></header>
-
-    <section class="customCard">
-      <table class="table customTable">
-        <thead>
-          <tr>
-            <th scope="col">Fecha</th>
-            <th scope="col">Descripcion</th>
-            <th scope="col">Importe</th>
-            <th scope="col">Estado</th>
-            <th scope="col">Acciones</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th class="customTableDate" scope="row">2023-10-25</th>
-            <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae aperiam quidem, molestiae, voluptatibus quibusdam inventore distinctio libero voluptate ex mollitia eius natus dolore, vero tempora vel ducimus. Excepturi, provident rerum!</td>
-            <td>$25000</td>
-            <td>Revision</td>
-            <td><button id="saveReport" type="button" class="btn customButton">Detalles</button></td>
-          </tr>
-          <tr>
-            <th class="customTableDate" scope="row">2023-10-29</th>
-            <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae aperiam quidem, molestiae, voluptatibus quibusdam inventore distinctio libero voluptate ex mollitia eius natus dolore, vero tempora vel ducimus. Excepturi, provident rerum!</td>
-            <td>$35000</td>
-            <td>Desaprobado</td>
-            <td><button id="saveReport" type="button" class="btn customButton">Detalles</button></td>
-          </tr>
-          <tr>
-            <th class="customTableDate" scope="row">2023-11-10</th>
-            <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae aperiam quidem, molestiae, voluptatibus quibusdam inventore distinctio libero voluptate ex mollitia eius natus dolore, vero tempora vel ducimus. Excepturi, provident rerum!</td>
-            <td>$7500</td>
-            <td>Revision</td>
-            <td><button id="saveReport" type="button" class="btn customButton">Detalles</button></td>
-          </tr>
-          <tr>
-            <th class="customTableDate" scope="row">2023-11-15</th>
-            <td>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae aperiam quidem, molestiae, voluptatibus quibusdam inventore distinctio libero voluptate ex mollitia eius natus dolore, vero tempora vel ducimus. Excepturi, provident rerum!</td>
-            <td>$10000</td>
-            <td>Aprobado</td>
-            <td><button id="saveReport" type="button" class="btn customButton">Detalles</button></td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
-
-    <!-- Modal -->
-    <div class="modal fade" id="detail" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel">Detalles</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                  <div action="" id="modalDetail" class="detailModal">
-          
-                  </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
+    <section class="customCard"></section>
 
     <script type="module" src="./historyView.js"></script>
     <script type="module" src="../../controller/historyController.js"></script>
