--- a/src/assets/styles/fieldsGrid.css
+++ b/src/assets/styles/fieldsGrid.css
@@ -9,9 +9,9 @@
     width: 100%;
 }
 
-.input-group-text > label {
-    width: 100%;
-    border-radius: 5px;
+.button-label-check{
+    width: 100% !important;
+    border-radius: 5px !important;
 }
 
 @media (max-width: 800px) {
