se realiza la busqueda de superiores.

--- a/src/view/management/management.html
+++ b/src/view/management/management.html
@@ -47,7 +47,6 @@
                 </div>
 
                 <div class="">
-
                     <select id="rol" class="form-select form_input" aria-label="Default select example">
                     </select>
                     <p class="form_input-error">el rol es requerido</p>
@@ -66,7 +65,8 @@
                 </div>
 
                 <div>
-                    <select id="superior" class="form-select" aria-label="Default select example">
+                    <select id="superior" disabled class="form-select" aria-label="Default select example">
+
                     </select>
                 </div>
 
