--- a/src/view/management/management.html
+++ b/src/view/management/management.html
@@ -11,9 +11,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="../../assets/styles/newReport.css">
-        <link rel="stylesheet" href="../../assets/styles/fieldsGrid.css">
-        <link rel="stylesheet" href="../../assets/styles/main.css">
+        <link rel="stylesheet" href="../../assets/styles/management.css">
 </head>
 
 <body>
@@ -29,8 +27,8 @@
         <button id="save" type="button" class="btn customButton">Crear</button>
     </section>
 
-    <script type="module" src="./newReportView.js"></script>
-    <script type="module" src="../../controller/newReportController.js"></script>
+    <script type="module" src="./managementView.js"></script>
+    <script type="module" src="../../controller/managementController.js"></script>
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
