--- a/src/assets/styles/fieldsGrid.css
+++ b/src/assets/styles/fieldsGrid.css
@@ -9,13 +9,17 @@
     width: 100%;
 }
 
+@media (max-width: 800px) {
+    #fieldsGrid {
+        grid-template-columns: 1fr;
+    }
+}
+
 .button-label-check{
     width: 100% !important;
     border-radius: 5px !important;
 }
 
-@media (max-width: 800px) {
-    #fieldsGrid {
-        grid-template-columns: 1fr;
-    }
+.form_input-error {
+    display: inline-block;
 }
