--- a/src/view/pendingApprovals/pendingApprovals.html
+++ b/src/view/pendingApprovals/pendingApprovals.html
@@ -22,6 +22,8 @@
 
     <script type="module" src="./pendingApprovalsView.js"></script>
     <script type="module" src="../../controller/pendingApprovalsController.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 
 </html>
